working with testcontainers